endpoints corrigidos e finalizados
